--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>The Normies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/media/favicon/icon.png">
+    <link rel="shortcut icon" href="./media/favicon/icon.png">
     <!--bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -82,7 +82,9 @@
                 <div class="jumbotron">
                     <h1 class="display-3">Our Fearless Leader</h1>
                     <hr class="my-2">
-                    <div id="leader-home"></div>
+                    <div id="leader-home">
+                        <p><%= playerName %></p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -105,7 +107,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
-            //$.getJSON('http://localhost:5000/files/media/home')
             $.getJSON('/files/media/home')
             .done(function(data){
                 var i = 0;
@@ -117,23 +118,6 @@
                         $('#bannerInner').append('<div class="carousel-item"><img class="d-block w-100 img-fluid" alt="home page background" src="' + val.name + '">');
                     }
                     i += 1;
-                });
-            });
-        });
-    </script>
-    <script>
-        $(document).ready(function(){
-            $.getJSON('/api/clan/8UJRVGY9')
-            .done(function(data){
-                var memberArray = data.members;
-                $.each(memberArray, function(key, val){
-                    if(val.role === 'leader'){
-                        $('#leader-home').append('<h3 class="display-5">' + val.name);
-                        $('#leader-home').append('<p class="lead">Level: ' + val.expLevel);
-                        $('#leader-home').append('<p class="lead">Trophies: ' + val.trophies);
-                        $('#leader-home').append('<p class="lead">Arena: ' + val.arena.name);
-                        return false;
-                    }
                 });
             });
         });
