--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -83,7 +83,6 @@
                     <h1 class="display-3">Our Fearless Leader</h1>
                     <hr class="my-2">
                     <div id="leader-home">
-                        <p><%= playerName %></p>
                     </div>
                 </div>
             </div>
@@ -118,6 +117,23 @@
                         $('#bannerInner').append('<div class="carousel-item"><img class="d-block w-100 img-fluid" alt="home page background" src="' + val.name + '">');
                     }
                     i += 1;
+                });
+            });
+        });
+    </script>
+    <script>
+        $(document).ready(function(){
+            $.getJSON('/api/clan/8UJRVGY9')
+            .done(function(data){
+                var memberArray = data.members;
+                $.each(memberArray, function(key, val){
+                    if(val.role === 'leader'){
+                        $('#leader-home').append('<h3 class="display-5">' + val.name);
+                        $('#leader-home').append('<p class="lead">Level: ' + val.expLevel);
+                        $('#leader-home').append('<p class="lead">Trophies: ' + val.trophies);
+                        $('#leader-home').append('<p class="lead">Arena: ' + val.arena.name);
+                        return false;
+                    }
                 });
             });
         });
