--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -39,6 +39,10 @@ body{
     background-color: #252525;
 }
 
+.card-img-top{
+    background-color: #252525;
+}
+
 .card-block{
     background-color: #3A3B3C;
 }
@@ -50,10 +54,15 @@ body{
 }
 
 footer{
+    /*position: absolute;*/
+    bottom: 0;
+    width: 100%;
+    height: 100px;
     background: black;
     color: antiquewhite;
-    padding-top: 1em;
     padding-bottom: 1em;
+    padding-top: 1em;
+    padding-left: 2em;
     overflow: hidden;
 }
 
@@ -67,6 +76,17 @@ hr{
     border-color: #343a40;
 }
 
+main{
+    z-index: 100;
+}
+
 main [class^="col"]{
     padding-top: 1.5em;
+}
+
+#banner{
+    margin-top: 5em;
+    margin-bottom: 0;
+    height: auto;
+    width: fit-content;
 }
