--- a/public/views/player.ejs
+++ b/public/views/player.ejs
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/clan">Our Clan</a>
@@ -42,7 +42,7 @@
                 </ul>
             </div>
         </nav>
-        <img class="img-fluid" src="/media/header/banner.jpg" style="width:100%; height: auto;">
+        <img class="img-fluid" src="/media/header/banner.png" style="width:100%; height: auto;">
     </header>
     <main>
         <div class="container">
