--- a/public/views/clan.ejs
+++ b/public/views/clan.ejs
@@ -40,7 +40,7 @@
                 </ul>
             </div>
         </nav>
-        <img class="img-fluid" src="/media/header/banner.png">
+        <img class="img-fluid" src="/media/header/banner.png" id="banner">
     </header>
     <main>
         <div class="container" id="wrapper">
