--- a/public/views/player.ejs
+++ b/public/views/player.ejs
@@ -42,7 +42,7 @@
                 </ul>
             </div>
         </nav>
-        <img class="img-fluid" src="/media/header/banner.png">
+        <img class="img-fluid" src="/media/header/banner.png" id="banner">
     </header>
     <main>
         <div class="container">
