player page progress

--- a/public/views/clan.ejs
+++ b/public/views/clan.ejs
@@ -57,7 +57,7 @@
                     <%data.forEach(function(member){ %>
                     <tr>
                         <td><a href="/player/<%= member.tag %>"><%= member.name %></a></td>
-                        <td><%= member.tropies %></td>
+                        <td><%= member.trophies %></td>
                         <td><%= member.arena.arena %></td>
                         <td><%= member.clanChestCrowns %></td>
                     </tr>
