--- a/public/views/partials/footer.ejs
+++ b/public/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-5">
         Follow Us On<br/>
-        <a href="https://twitter.com/CR_Normies"><img src="./media/footer/twitter.png" alt="twitter"></a>
+        <a href="https://twitter.com/CR_Normies"><img src="/media/footer/twitter.png" alt="twitter"></a>
     </div>
     <div class="col-md-5">
         <p>Made by Sir Doge. Pls give doge coins.<p>
