--- a/public/views/player.ejs
+++ b/public/views/player.ejs
@@ -45,7 +45,7 @@
         <img class="img-fluid" src="/media/header/banner.png" id="banner">
     </header>
     <main>
-        <div class="container">
+        <div class="container" id="wrapper">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card">
@@ -63,8 +63,22 @@
                     </div>
                 </div>
             </div>
+            <br/>
+            <div class="card">
+                <h3 class="card-header">Current Deck</h3>
+                <div class="card-block">
+                    <div id="player-deck">
+                        <% data.currentDeck.forEach(function(card){ %>
+                            <img src="<%= card.icon %>">
+                        <% }) %>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
+    <footer>
+        <% include ./partials/footer %>
+    </footer>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </html>
