--- a/public/views/clan.ejs
+++ b/public/views/clan.ejs
@@ -44,10 +44,11 @@
     </header>
     <main>
         <div class="container" id="wrapper">
-            <table class="table table-dark">
+            <table class="table table-dark" id="player-list">
                 <thead>
                     <tr>
-                        <th scope="col">Name</th>
+                        <th id="player-list-name" scope="col">Name</th>
+                        <th scope="col">Level</th>
                         <th scope="col">Trophies</th>
                         <th scope="col">Arena</th>
                         <th scope="col">Clan Chest Crowns</th>
@@ -56,7 +57,8 @@
                 <tbody id="member-list">
                     <%data.forEach(function(member){ %>
                     <tr>
-                        <td><a href="/player/<%= member.tag %>"><%= member.name %></a></td>
+                        <td id="player-list-name"><a href="/player/<%= member.tag %>"><%= member.name %></a></td>
+                        <td><%= member.expLevel %></td>
                         <td><%= member.trophies %></td>
                         <td><%= member.arena.arena %></td>
                         <td><%= member.clanChestCrowns %></td>
